fix layout to handle overflows correctly

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,3 +93,11 @@
     padding: 0;
 }
 
+.article__content {
+    overflow-wrap: break-word;
+    overflow: hidden;
+}
+
+.overflow-x-auto {
+    overflow-x: auto;
+}
